rubocop/examples/bad/style_EmptyLineBetweenDefs.rb
# TODO:Use empty lines between method definitions and also
#   to break up methods into logical paragraphs internally.

# bad
def some_method
  data = initialize(options)

  data.manipulate!

  data.result
end
def some_method
  result
end
